tests/ui/borrowck/borrowck-lend-flow-match.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/borrowck-lend-flow-match.rs:12:13
   |
LL |         Some(ref r) => {
   |              ----- borrow of `x` occurs here
LL |             x = Some(1);
   |             ^^^^^^^^^^^ assignment to borrowed `x` occurs here
LL |             drop(r);
   |                  - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
